--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ a:hover {
   color: #535bf2;
 }
 
+p{
+  margin: 0;
+}
+
 body {
   margin: 0;
   min-width: 320px;
@@ -62,9 +66,12 @@ html[data-theme="light"] {
   --background-mainboard: 246, 246, 247; /* #F6F6F7 */
   --text-color-sidebar-and-header: 22, 22, 22; /* #161616 */
   --text-color-mainboard: 22, 22, 22; /* #161616 */
+  --button-color-mainboard: 255, 255, 255; /* #FFFFFF */
   --button-create-board: 190, 219, 176; /* #BEDBB0 */
   --button-add-column: 22, 22, 22; /* #161616 */
   --button-color-modal: 190, 219, 176; /* #BEDBB0 */
+  --background-modal-filters: 252, 252, 252 /*#FCFCFC */
+   
 }
 
 html[data-theme="dark"] {
@@ -73,9 +80,11 @@ html[data-theme="dark"] {
   --background-mainboard: 31, 31, 31; /* #1F1F1F */
   --text-color-sidebar-and-header: 255, 255, 255; /* #FFFFFF */
   --text-color-mainboard: 255, 255, 255; /* #FFFFFF */
+  --button-color-mainboard: 18, 18, 18; /* #121212 */
   --button-create-board: 190, 219, 176; /* #BEDBB0 */
   --button-add-column: 255, 255, 255; /* #FFFFFF */
   --button-color-modal: 190, 219, 176; /* #BEDBB0 */
+  --background-modal-filters: 21, 21, 21; /* #151515 */
 }
 
 html[data-theme="violet"] {
@@ -84,9 +93,11 @@ html[data-theme="violet"] {
   --background-mainboard: 236, 237, 253; /* #ECEDFD */
   --text-color-sidebar-and-header: 255, 255, 255; /* #FFFFFF */
   --text-color-mainboard: 22, 22, 22; /* #161616 */
+  --button-color-mainboard: 255, 255, 255 /* #FFFFFF */
   --button-create-board: 184, 188, 253; /* #B8BCFD */
   --button-add-column: 82, 85, 188; /* #5255BC */
   --button-color-modal: 82, 85, 188; /* #5255BC */
+  --background-modal-filters:252, 252, 252 /*#FCFCFC */
 }
 
 /*
