--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,9 +1,22 @@
 .side {
   width: 260px;
-  background-color: grey;
+  background-color: rgb(var(--background-sidebar));
   height: 100vh;
   z-index: 5;
   transition: left 200ms ease-in-out;
+  padding: 24px;
+}
+
+.svg_logo {
+  background-color: rgb(var(--background-logo));
+  border-radius: 8px;
+}
+
+.logo_link {
+}
+
+.use {
+  fill: rgb(var(--logo));
 }
 
 @media screen and (max-width: 768px) {
