--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,8 @@ img {
 }
 
 html[data-theme="light"] {
+  --logo: 255, 255, 255; /* #FFFFFF */
+  --background-logo: 31, 31, 31; /* #1F1F1F */
   --background-sidebar: 255, 255, 255; /* #FFFFFF */
   --background-header: 252, 252, 252; /* #FCFCFC */
   --background-mainboard: 246, 246, 247; /* #F6F6F7 */
@@ -68,6 +70,8 @@ html[data-theme="light"] {
 }
 
 html[data-theme="dark"] {
+  --logo: 255, 255, 255; /* #FFFFFF */
+  --background-logo: 31, 31, 31; /* #1F1F1F */
   --background-sidebar: 18, 18, 18; /* #121212 */
   --background-header: 22, 22, 22; /* #161616 */
   --background-mainboard: 31, 31, 31; /* #1F1F1F */
@@ -79,6 +83,8 @@ html[data-theme="dark"] {
 }
 
 html[data-theme="violet"] {
+  --logo: 82, 85, 188; /* #5255BC */
+  --background-logo: 236, 237, 253; /* #ECEDFD */
   --background-sidebar: 82, 85, 188; /* #5255BC */
   --background-header: 255, 255, 255; /* #FFFFFF */
   --background-mainboard: 236, 237, 253; /* #ECEDFD */
