--- a/src/components/ScreensPage/ScreensPage.module.css
+++ b/src/components/ScreensPage/ScreensPage.module.css
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   height: 100vh;
-  background-color: rgb(233, 111, 111);
+  background-color: rgb(var(--background-mainboard));
   margin: 0;
 
 
