--- a/src/components/ScreensPage/ScreensPage.module.css
+++ b/src/components/ScreensPage/ScreensPage.module.css
@@ -1,17 +1,21 @@
 .main {
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: 100%;
   background-color: rgb(var(--background-mainboard));
   margin: 0;
-
-
 }
 
 .mainWrapper{
   width: 100%;
   height: 100%;
   display: flex;
-  padding: 0 24px;
+  padding: 0 20px;
+  overflow: scroll;
+}
+
+.columnWrapper{
+  display: flex;
+  gap: 34px;
 }
 
 .noBoard{
@@ -20,12 +24,14 @@ justify-content: center;
 }
 
 .boardCreated{
-  justify-content: baseline;
+  justify-content: start;
   align-items: baseline;
 }
 
 .button{
-  padding: 14px 78px;
+  max-height: 56px;
+  padding: 14px 0;
+  width: 334px;
   border: none;
   border-radius: 8px;
   background-color: rgb(var(--button-color-mainboard));
@@ -58,6 +64,8 @@ font-weight: 500;
 }
 
 .text{
+  width: 100%;
+  max-width: 335px;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   line-height: 1.29;
@@ -70,3 +78,11 @@ font-weight: 500;
   color: rgb(var(--button-create-board));
 
 }
+
+@media (min-width: 768px) {
+  .text{
+  max-width: 486px;
+  }
+
+}
+
