--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,6 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
 
 p {
   margin: 0;
@@ -57,9 +54,6 @@ img {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
 }
 
 html[data-theme="light"] {
@@ -75,6 +69,11 @@ html[data-theme="light"] {
   --button-add-column: 22, 22, 22; /* #161616 */
   --button-color-modal: 190, 219, 176; /* #BEDBB0 */
   --background-modal-filters: 252, 252, 252; /*#FCFCFC */
+  --svg-plus: 18, 18, 18; /* #121212 */
+  --background-hover-board: 246, 246, 247; /* #F6F6F7 */
+  --svglogout: 190, 219, 176; /* #BEDBB0 */
+  --needhelpplatform: 246, 246, 247; /* #F6F6F7 */
+  --logonameplatform: 190, 219, 176; /* #BEDBB0 */
 }
 
 html[data-theme="dark"] {
@@ -90,6 +89,11 @@ html[data-theme="dark"] {
   --button-add-column: 255, 255, 255; /* #FFFFFF */
   --button-color-modal: 190, 219, 176; /* #BEDBB0 */
   --background-modal-filters: 21, 21, 21; /* #151515 */
+  --svg-plus: 18, 18, 18; /* #121212 */
+  --background-hover-board: 31, 31, 31; /* #1F1F1F */
+  --svglogout: 190, 219, 176; /* #BEDBB0 */
+  --needhelpplatform: 31, 31, 31; /* #1F1F1F */
+  --logonameplatform: 190, 219, 176; /* #BEDBB0 */
 }
 
 html[data-theme="violet"] {
@@ -105,6 +109,11 @@ html[data-theme="violet"] {
   --button-add-column: 82, 85, 188; /* #5255BC */
   --button-color-modal: 82, 85, 188; /* #5255BC */
   --background-modal-filters: 252, 252, 252; /*#FCFCFC */
+  --svg-plus: 255, 255, 255; /* #FFFFFF */
+  --background-hover-board: 255, 255, 255, 0.5; /* #FFFFFF */
+  --svglogout: 255, 255, 255, 0.5; /* #FFFFFF */
+  --needhelpplatform: 236, 237, 253, 0.6; /* #ECEDFD */
+  --logonameplatform: 82, 85, 188; /* #5255BC */
 }
 
 /*
