--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
   background-color: rgb(var(--background-header));
   display: flex;
   justify-content: right;
-  padding: 18px 32px;
+  padding: 18px 20px;
   align-items: center;
 }
 
@@ -21,6 +21,80 @@
   border: none;
 }
 
+.header_down.rotated {
+  transform: rotate(-90deg);
+  
+}
+
+.header_theme {
+  color: rgba(22, 22, 22, 0.8);
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  
+}
+
+.header_down {
+  stroke-width: 1.50px;
+  stroke: rgba(22, 22, 22, 0.8);
+}
+
+.header_user {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: #161616;
+  margin-right: 8px;
+}
+
+.select_theme {
+  display: inline-flex;
+  align-items: center;
+  margin-left: auto;
+  
+}
+
+.header_avatar {
+  border-radius: 8px;
+}
+
+.select_user {
+  display: inline-flex;
+  align-items: center;
+  padding-left: 14px;
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: rgb(var(--background-header));
+  width: 100px;
+  height: 107px;
+  z-index: 1000;
+  border: 1px solid #bedbb0;
+  border-radius: 8px;
+  width: 100px;
+  height: 107px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.theme_choise {
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: -0.02em;
+    color: #161616;
+}
+
+.theme_choise:hover {
+    color: #bedbb0;
+}
+
+.modalContent {
+  margin-top: 18px;
+  margin-left: 18px;
+}
+
 @media screen and (max-width: 768px) {
   .burger_menu {
     display: flex;
@@ -31,4 +105,5 @@
   .header {
     justify-content: space-between;
   }
-}
+  }
+
