--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -23,7 +23,6 @@
 
 .header_down.rotated {
   transform: rotate(-90deg);
-  
 }
 
 .header_theme {
@@ -31,11 +30,10 @@
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.02em;
-  
 }
 
 .header_down {
-  stroke-width: 1.50px;
+  stroke-width: 1.5px;
   stroke: rgba(22, 22, 22, 0.8);
 }
 
@@ -51,7 +49,6 @@
   display: inline-flex;
   align-items: center;
   margin-left: auto;
-  
 }
 
 .header_avatar {
@@ -66,8 +63,8 @@
 
 .modalOverlay {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 40px;
+  right: 50px;
   background-color: rgb(var(--background-header));
   width: 100px;
   height: 107px;
@@ -80,14 +77,14 @@
 }
 
 .theme_choise {
-    font-weight: 400;
-    font-size: 14px;
-    letter-spacing: -0.02em;
-    color: #161616;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: #161616;
 }
 
 .theme_choise:hover {
-    color: #bedbb0;
+  color: #bedbb0;
 }
 
 .modalContent {
@@ -105,5 +102,4 @@
   .header {
     justify-content: space-between;
   }
-  }
-
+}
