--- a/src/index.css
+++ b/src/index.css
@@ -58,11 +58,17 @@ img {
 }
 
 .loader {
-  min-height: 100vh;
+  border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #1a1a1a;
+  width: 100%;
+  z-index: 100;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #1a1a1af2;
 }
 
 @media (prefers-color-scheme: light) {
